nick_derobertis_site/styles.scss
.bk {
  width: 100%;
}

.bk-root {
  position: unset;
  width: unset;
  height: unset;
  z-index: unset;
  box-sizing: unset;
  font-family: unset;
  font-size: unset;
}

.p {
  margin-top: 0;
  margin-bottom: 1rem;
}

@mixin set-dual-colors($primary, $secondary) {
  background-color: $secondary;
  color: $primary;
  fill: $primary;
  stroke: $primary;
}

.d-contents.d-contents {
  display: contents;
}

.dropdown-submenu {
  position: relative;
}

.dropdown-submenu a::after {
  transform: rotate(-90deg);
  position: absolute;
  right: 6px;
  top: 0.8em;
}

.dropdown-submenu .dropdown-menu {
  top: 0;
  left: 100%;
  margin-left: 0.1rem;
  margin-right: 0.1rem;
}

.software-card-github-button {
  width: 90px;
}

.software-card-docs-button {
  width: 75px;
}

.software-card-img.software-card-img {
  max-height: 250px;
  margin: 20px 0px 20px 20px;
  width: 20%;
}

.software-card-header-wrapper {
  display: flex;
  align-items: center;
  margin-top: 20px;
  margin-right: 20px;
}

.software-card-header-text-wrapper {
  margin-left: 20px;
}

@mixin page-banner($bgColor: black, $height: 30rem) {
  background-color: $bgColor;
  margin-bottom: 0;
  position: relative;
  min-height: $height;
}

@mixin page-banner-img($opacity: 35%, $height: 30rem) {
  position: absolute;
  top: 0;
  left: 0;
  min-width: 100%;
  height: $height;
  opacity: $opacity;
  object-position: center;
  object-fit: cover;
}

@mixin banner-content-container($zIndex: 5, $color: white) {
  z-index: $zIndex;
  color: $color;
}

.software-banner {
  @include page-banner;
}

.software-banner > img {
  @include page-banner-img($opacity: 50%);
}

.software-banner-content-container {
  @include banner-content-container;
}

.research-banner {
  @include page-banner;
}

.research-banner > img {
  @include page-banner-img;
}

.research-banner-content-container {
  @include banner-content-container;
}

.research-pane-container {
}

.nd-logo {
  width: 45px;
  height: 45px;
}

.navbar-toggler {
  position: fixed;
  right: 10px;
  top: 10px;
}

.nav-icon {
  padding: 0.46875rem 1rem;
  margin-top: 2px;
  text-align: center;
}

.research-category-img {
  width: 50px;
  height: 50px;
  display: inline-block;
}

.research-category-img > svg {
  width: 100%;
  height: 100%;
}

.research-category-img > i {
  font-size: 50px;
}

.research-category {
  height: 100px;
  width: 100px;
  margin: 15px;
  text-align: center;
}

.research-category-spacer {
  width: 100%;
  padding: 2px;
}

.research-pane-heading {
  letter-spacing: -0.02rem;
  margin-top: 0;
}

.research-header-description-container {
  padding: 15px;
}

.research-header-description-container > * {
  margin-bottom: 1rem;
}

// Utility classes
.width-unset {
  width: unset !important;
}

.no-link {
  cursor: default;
  text-decoration: none;
}

.fa-2-5x {
  font-size: 2.5em;
}

// Bootstrap variable overrides
$body-bg: #fbfcfd;

$theme-colors: (
  "primary": #25ad30,
  "primary-offset": #ccf7cf,
  "tertiary": #38483b,
  "tertiary-offset": white,
  "background": #fbfcfd,
);

@import "bootstrap-material/scss/bootstrap-material-design";

// Set variables based on bootstrap variables

// Default background
$default-bg: map-get(
  $map: $theme-colors,
  $key: "background",
);
// Background for logo
$logo-bg: map-get(
  $map: $theme-colors,
  $key: "primary",
);
// ND part of logo color
$logo-fg: white;

body {
  background-color: $default-bg;
}

.nd-logo-background {
  fill: $logo-bg;
}

.nd-logo-foreground {
  fill: $logo-fg;
}

.navbar-nav {
  @include media-breakpoint-up(md) {
    flex: 1;
    justify-content: space-between;
  }
}

.carousel-item > img {
  opacity: 35%;
  object-position: center;
  object-fit: cover;
}

$skill-bar-fg: map-get(
  $map: $theme-colors,
  $key: "primary",
);

$skill-bar-bg: map-get(
  $map: $theme-colors,
  $key: "primary-offset",
);

$skill-name-bg: map-get(
  $map: $theme-colors,
  $key: "tertiary",
);

$skill-name-fg: map-get(
  $map: $theme-colors,
  $key: "tertiary-offset",
);

$skill-bar-border-radius: 20px;

.skills-widget-wrapper {
  background-color: $skill-name-bg;
  padding: 20px;
}

.skill-dropdown-wrapper {
  display: flex;
  align-items: center;
  background-color: $skill-name-bg;
  padding: 5px;
  width: 100%;
}

.skill-dropdown-menu.skill-dropdown-menu {
  background-color: $skill-name-bg;
  width: 100%;
  padding: 3%;
}

.skill-dropdown-submenu.skill-dropdown-submenu {
  background-color: $skill-name-bg;
  width: 100%;
}

.skill-dropdown-menu .skill-dropdown-menu.skill-dropdown-menu {
  position: absolute;
  transform: translate3d(0px, 32px, 0px);
  top: 0px;
  left: 0px;
  will-change: transform;
}

.skill-dropdown-item.skill-dropdown-item {
  max-width: unset;
  color: $skill-bar-fg;
}

.skill-dropdown-item.skill-dropdown-item:hover,
.skill-dropdown-item.skill-dropdown-item:focus {
  background-color: $skill-name-bg;
  color: $skill-bar-bg;
}

.skill-name {
  color: $skill-name-fg;
  margin-right: 5px;
}

.skill-bar-background {
  background-color: $skill-bar-bg;
  border-radius: $skill-bar-border-radius;
  flex: 1;
  height: 1.3em;
}

.skill-bar-foreground {
  background-color: $skill-bar-fg;
  border-radius: $skill-bar-border-radius;
  height: 100%;
}

.skill-dropdown-arrow {
  width: 0;
  height: 0;
  margin-left: 0.255em;
  vertical-align: 0.255em;
  border-top: 0.3em solid;
  border-right: 0.3em solid transparent;
  border-bottom: 0;
  border-left: 0.3em solid transparent;
}

.skill-container {
  margin-top: 5px;
  margin-bottom: 5px;
}

.skill-container .dropdown-toggle::after {
  content: none;
}

.skill-dropdown-arrow-spacer {
  width: 14px;
}

.jumbotron {
  padding-top: 3rem;
  padding-bottom: 3rem;
  margin-bottom: 0;
  background-color: #fff;

  @include media-breakpoint-up(md) {
    padding-top: 6rem;
    padding-bottom: 6rem;
  }
}

.jumbotron p:last-child {
  margin-bottom: 0;
}

.jumbotron h1 {
  font-weight: 300;
}

.jumbotron .container {
  max-width: 40rem;
}

.software-card {
  @include media-breakpoint-up(lg) {
    min-height: 500px;
  }
  @include media-breakpoint-up(xl) {
    min-height: 400px;
  }
}

.software-card-img-placeholder {
  font-size: 5em;
  @include media-breakpoint-up(lg) {
    font-size: 3em;
  }
}

$research-category-img-color: map-get(
  $map: $theme-colors,
  $key: "secondary",
);

// Research page variables
$research-panel-fg: map-get(
  $map: $theme-colors,
  $key: "secondary",
);
$research-panel-bg: $default-bg;
$research-panel-offset-bg: map-get(
  $map: $theme-colors,
  $key: "tertiary",
);
$research-panel-offset-fg: map-get(
  $map: $theme-colors,
  $key: "tertiary-offset",
);

.research-category-img path,
.research-category-img rect {
  fill: $research-category-img-color;
  stroke: $research-category-img-color;
}

.research-pane {
  padding: 3rem;
  padding-top: 5rem;
  padding-bottom: 5rem;
}

.research-pane * {
  @include set-dual-colors(
    $primary: $research-panel-fg,
    $secondary: $research-panel-bg
  );
}

.research-pane-offset.research-pane-offset * {
  @include set-dual-colors(
    $primary: $research-panel-offset-fg,
    $secondary: $research-panel-offset-bg
  );
}

.navbar.navbar {
  z-index: 20;
}

